--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/vizdev/css/vizdev-main-test.css" />
+    <link rel="stylesheet" type="text/css" href="/css/vizdev-main-test.css" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -47,9 +47,6 @@
 
         gtag('config', 'UA-156998560-1');
     </script>
-
-    <!-- anime-master -->
-    <script src="/assets/js/anime-master/lib/anime.min.js"></script>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
