--- a/Zihan_Mei_ex5_ Scrollytelling.html
+++ b/Zihan_Mei_ex5_ Scrollytelling.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/vizdev-main-test.css" />
+    <link rel="stylesheet" type="text/css" href="css/Zihan_Mei_ex5_Scrollytelling.css" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>VIZ DEV</title>
-    <meta name="description" content="11.454 Big Data and Visualization">
+    <title>Zihan_Mei_ex5_Scrollytelling</title>
+    <meta name="description" content="11.454 Big Data and Visualization, PSET#5, Building a Scrolly Telling Page">
     <meta name="author" content="Zihan Zephaniah MEI">
 
     <!-- fonts -->
@@ -55,12 +55,18 @@
 </head>
 
 <body>
-    <div class="bgimg"></div>
+    <div class="parallax"></div>
     <div class="words">
-        <h1>Equity During COVID</h1>
-        <h2>Measuring Access to Medical Resources for the Minority</h2>
-        <p>By: Zihan, Beko, Ichi</p>
-        <p>11.454 Big Data & Visualization</p>
+        <h1>How to Improve Racial Equity in the Access to Medical Resources during COVID</h1>
+        <h2>Zihan_Mei_ex5_Scrollytelling</h2>
+        <blockquote>
+            <p>By Zihanmei, on 2020-10-25</p>
+        </blockquote>
+        <p>11.454 Big Data, Visualization, And Society<br>Instructor: Sarah Williams, Yuan Lai<br>TA: Yanchao Li, Lily
+            Xie, Patricia Cafferky</p>
+        <p>source for background image: <a
+                href="https://showcase.earthengine.app/view/jrc-global-surface-water-animation">JRC Global Surface Water
+                Animation</a></p>
         <!-- <p><a href="https://www.zmei.moe/">Go to Homepage.</a></p> -->
     </div>
 </body>
