--- a/Zihan_Mei_ex5_ Scrollytelling.html
+++ b/Zihan_Mei_ex5_ Scrollytelling.html
@@ -63,6 +63,10 @@
     <!-- anime-master -->
     <script src="js/anime-master/lib/anime.min.js"></script>
 
+    <!-- mapbox -->
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+
 </head>
 
 <body>
@@ -132,9 +136,13 @@
                             href="https://getbootstrap.com/docs/4.0/layout/grid/"><b>bootstrap</b></a>.</li>
                     <li>Displayed the column systems as proposed at mid-term.</li>
                     <li>Inlcuded the footer, back-to-top button, scroll-down arrow.</li>
+                    <br>
                     <li>Navbar not included.</li>
                     <li>Some detialed font size and weight need fixing later.</li>
                     <li>Sticky property not included.</li>
+                    <br>
+                    <li>Trouble in resizeing Bokeh charts while integrating it.</li>
+                    <li>Trouble in integrating mapbox item directly into the html file, even if I fixed the data path.</li>
                 </ol>
             </div>
         </div>
@@ -199,17 +207,26 @@
             <div class="col-4 align-self-center">
                 <h2>Median Income & Unemployment</h2>
                 <!-- <div class="testchart"></div> -->
-                <iframe src="assets/Alabama_bar.html" id="alabamachart" width="100%" frameborder="0"></iframe>
+                <iframe src="assets/Alabama_bar.html" id="alabamachart" width="100%" frameborder="0" scrolling="no"
+                    onload="resizeIframe(this)"></iframe>
             </div>
-            <div class="col-8 align-self-center testcontent"></div>
+            <div class="col-8 align-self-center">
+                <iframe src="assets/my_map.html" id="myfoliummap" width="100%" frameborder="0" scrolling="no"></iframe>
+            </div>
         </div>
 
         <div class="row" id="insurance">
             <div class="col-4 align-self-center">
                 <h2>Health Insurance Coverage</h2>
-                <div class="testchart"></div>
+                <!-- <div class="testchart"></div> -->
+                <iframe src="assets/Alabama_bar.html" id="alabamachart" width="100%" frameborder="0" scrolling="no"
+                    onload="resizeIframe(this)"></iframe>
             </div>
-            <div class="col-8 align-self-center testcontent"></div>
+            <div class="col-8 align-self-center">
+                <!-- <div id="mapbox"></div> -->
+                <iframe src="assets/HTML_example_in_class.html" id="mapbox" width="100%" frameborder="0"
+                    scrolling="no"></iframe>
+            </div>
         </div>
         <hr>
     </section>
@@ -224,7 +241,9 @@
         <div class="row" id="online">
             <div class="col-4 align-self-center">
                 <h2>Online-Based Information</h2>
-                <div class="testchart"></div>
+                <!-- <div class="testchart"></div> -->
+                <iframe src="assets/Alabama_bar.html" id="alabamachart" width="100%" frameborder="0" scrolling="no"
+                    onload="resizeIframe(this)"></iframe>
             </div>
             <div class="col-8 align-self-center testcontent"></div>
         </div>
@@ -232,7 +251,9 @@
         <div class="row" id="education">
             <div class="col-4 align-self-center">
                 <h2>Education-Based Information</h2>
-                <div class="testchart"></div>
+                <!-- <div class="testchart"></div> -->
+                <iframe src="assets/Alabama_bar.html" id="alabamachart" width="100%" frameborder="0" scrolling="no"
+                    onload="resizeIframe(this)"></iframe>
             </div>
             <div class="col-8 align-self-center testcontent"></div>
         </div>
@@ -249,7 +270,9 @@
         <div class="row" id="mobility">
             <div class="col-4 align-self-center">
                 <h2>Disability & Vehicles</h2>
-                <div class="testchart"></div>
+                <!-- <div class="testchart"></div> -->
+                <iframe src="assets/Alabama_bar.html" id="alabamachart" width="100%" frameborder="0" scrolling="no"
+                    onload="resizeIframe(this)"></iframe>
             </div>
             <div class="col-8 align-self-center testcontent"></div>
         </div>
@@ -257,7 +280,9 @@
         <div class="row" id="facilities">
             <div class="col-4 align-self-center">
                 <h2>Access to Medical Facilities</h2>
-                <div class="testchart"></div>
+                <!-- <div class="testchart"></div> -->
+                <iframe src="assets/Alabama_bar.html" id="alabamachart" width="100%" frameborder="0" scrolling="no"
+                    onload="resizeIframe(this)"></iframe>
             </div>
             <div class="col-8 align-self-center testcontent"></div>
         </div>
@@ -279,9 +304,11 @@
 
         <div class="row">
             <div class="col-4 align-self-center">
-                <div class="testchart"></div>
-                <div class="testchart"></div>
-            </div>
+                <!-- <div class="testchart"></div> -->
+                <iframe src="assets/Alabama_bar.html" id="alabamachart" width="100%" frameborder="0" scrolling="no"
+                    onload="resizeIframe(this)"></iframe> <!-- <div class="testchart"></div> -->
+                <iframe src="assets/Alabama_bar.html" id="alabamachart" width="100%" frameborder="0" scrolling="no"
+                    onload="resizeIframe(this)"></iframe> </div>
             <div class="col-8 align-self-center testcontent"></div>
         </div>
 
@@ -345,15 +372,54 @@
 
     <!-- Automatically Adjust iFrame Height According to its Contents -->
     <script>
-        // Selecting the iframe element
-        var iframe = document.getElementById("alabamachart");
-
-        // Adjusting the iframe height onload event
-        iframe.onload = function () {
-            iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
+        function resizeIframe(obj) {
+            obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
         }
     </script>
     <!-- end of iframe height -->
+
+    <!-- mapbox -->
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1Ijoic2F0dXJuLWRybSIsImEiOiJja2dkbGNrNmowOHBjMnFsN2U2ZW82NXc1In0.YYuvMNHy448lewsxlIpfVg';
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/saturn-drm/ckggkbvcg0qyp19pgx6fzzjup',
+            center: [-71.0588, 42.3601],
+            zoom: 14
+        })
+
+        // Load data source and add layer
+        map.on('load', function () {
+            // Add data sources:
+            map.addSource('complaints', {
+                'type': 'geojson',
+                'data': 'data/boston_service_requests.geojson',
+                'generateId': true // This ensures that all features have unique IDs
+            });
+
+            // Add layer to discplay data:
+            map.addLayer({
+                id: 'complaints_viz',
+                type: 'circle',
+                source: 'complaints',
+                paint: {
+                    'circle-radius': 4,
+                    'circle-color': [
+                        'interpolate',
+                        ['linear'],
+                        ['number', ['get', 'response_time']],
+                        0, '#ffeda0',
+                        6, '#fd8d3c',
+                        12, '#fc4e2a',
+                        18, '#e31a1c',
+                        24, '#bd0026'
+                    ],
+                    'circle-opacity': 0.6
+                },
+            });
+        });
+    </script>
+    <!-- end of mapbox -->
 </body>
 
 </html>
