--- a/d3pset6-2.html
+++ b/d3pset6-2.html
@@ -133,7 +133,7 @@
                         return 'none';
                     }
                 })
-                .html(5.5);
+                .html(5.5); // my last label here is '5 to 6' or '5.06 to 5.69', and I modified to 5.5 manually, as shown in pdf file
         });
     </script>
 </body>
