--- a/11-16interactivemap.html
+++ b/11-16interactivemap.html
@@ -72,7 +72,7 @@
 	</div>
 
 	<script type="text/javascript">
-		var nycgeourl = 'datas/Modified Zip Code Tabulation Areas (MODZCTA).geojson';
+		var nycgeourl = 'datas/00-tractTOzcta/Modified Zip Code Tabulation Areas (MODZCTA).geojson';
 		var height = 800, width = 800;
 		var svg = d3.select('#main').append('svg').attr('height', height).attr('width', width).attr('style', 'border: solid 1px black');
 
